--- a/src/Pages/HomeMobile.module.css
+++ b/src/Pages/HomeMobile.module.css
@@ -124,29 +124,30 @@
   text-indent: -9999px;
 }
 
-.main_nav{
+@media (max-width: 1024px){
+.main_link {
   overflow: hidden;
+  margin: 0 auto;
   padding: 16px 0;
   background: rgb(250, 250, 250);
+
 }
 
-.main_nav ul{
+.main_link ul{
+  overflow: hidden;
   list-style: none;
-  display: block;
-  /* margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px; */
+  width: 100%;
+
+  margin: 0 auto;
+  text-align: center;
 }
 
-.main_nav ul li{
-  display: list-item;
-  float: left;
-  width: 25.5%;
+.main_link ul li{
+  display: inline-block;
+  width: 33.3%;
 }
 
-.main_nav ul li a{
+.main_link ul li a{
   display: block;
   overflow: hidden;
   height: 79px;
@@ -156,16 +157,17 @@
   cursor: pointer;
 }
 
-.main_nav ul li a span{
+.main_link ul li a span{
   display: inline-block;
   width: 48px;
   height: 48px;
   margin: 0 auto;
 }
 
-.main_nav ul li a p{
+.main_link ul li a p{
   height: 20px;
   padding-top: 7px;
+}
 }
 
 .menuBar{
