--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #f7323f;
     color: rgba(255,255,255,0.8);
 }
 
