--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -34,7 +34,12 @@
     transition: 0.4s;
 }
 
-.scrolled_top_box h1 {
+.top_box > h1 > a{
+    text-decoration: none; 
+    color : #fff
+}
+
+.scrolled_top_box > h1 > a{
     color: #f7323f;
 }
 
