--- a/src/Styles/RoomList.module.css
+++ b/src/Styles/RoomList.module.css
@@ -21,12 +21,22 @@
     background-color: #f7323f;
 }
 
-.header_layout{
-    background-color: #f7323f;
-    width: 1024px;
+.search_header_layout{
+    background-color: rgb(250, 250, 250);
+    width: 100%;
     height: 211px;
     margin: auto;
-    color: #fff;
+    color: black;
+}
+
+.search_title{
+    text-align: center;
+    line-height: 140px;
+    margin-top: 64px;
+
+    font-size: 30px;
+    font-weight: 500;
+    color: black;
 }
 
 /* nav바 End */
@@ -37,6 +47,10 @@
     margin-top: 64px;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.search_top_box{
+    background-color: white;
 }
 
 .page_center h2 {
