--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -11,7 +11,15 @@
     align-items: center;
     justify-content: space-between;
     background-color: #f7323f;
-    color: rgba(255,255,255,0.8);
+    color: rgba(255, 255, 255, 0.8);
+    /* position: absolute;
+    width: 100%;
+    height: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f7323f;
+    color: rgba(255,255,255,0.8); */
 }
 
 .top_box h1 {
