design: 호텔 상세 페이지 디자인 작업 완료
추가적으로, 캘린더 컴포넌트 더욱 쓰기 좋게 수정했습니다. 별점 svg 추가 (컴포넌트 형식으로 쓰시면 됩니다.)

--- a/src/Styles/FilterMenu.module.css
+++ b/src/Styles/FilterMenu.module.css
@@ -50,6 +50,7 @@ border-radius: 4px;
 
 .date_select_box {
     display: flex;
+    position: relative;
     align-items: center;
     height: 40px;
     background-color: rgba(0,0,0,0.02);
