--- a/src/Styles/Calender.module.css
+++ b/src/Styles/Calender.module.css
@@ -1,3 +1,7 @@
+.date_container {
+    position: relative;
+}
+
 .calendar_box {
     width: 375px;
     height: 400px;
@@ -7,8 +11,7 @@
     border-radius: 4px;
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);
     position: absolute;
-    top: 370px;
-
+    top: 50px;
     /* 드래그 방지 */
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -109,4 +112,27 @@ margin-left: 5px;
     pointer-events: none;
     background-color: transparent;
     color: silver;
+}
+
+/* Date_box */
+
+
+.date_select_box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 250px;
+    height: 40px;
+    background-color: rgba(0,0,0,0.02);
+    border: 1px solid rgba(0,0,0,0.08);
+    border-radius: 4px;
+    margin: 32px 0 32px 0;
+    font-size: 18px;
+    color: rgba(0,0,0,0.87);
+}
+
+.calender_img {
+    width: 20px;
+    height: 20px;
+    margin: 0px 10px 0 10px;
 }
