--- a/src/Styles/ImgSlider.module.css
+++ b/src/Styles/ImgSlider.module.css
@@ -19,17 +19,21 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    overflow: hidden;
 }
 
 .swiper_wrap > ul {
     width: 460px;
     display: flex;
-    overflow: hidden;
 }
 
 .swiper_wrap > ul li img {
     width: 115px;
-    height: 84px;
+    height: 80px;
     padding: 2px;
+}
+
+.slider_wrap p {
+    cursor: pointer;
 }
 
