--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -12,14 +12,7 @@
     justify-content: space-between;
     background-color: #f7323f;
     color: rgba(255, 255, 255, 0.8);
-    /* position: absolute;
-    width: 100%;
-    height: 64px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #f7323f;
-    color: rgba(255,255,255,0.8); */
+
 }
 
 .top_box h1 {
@@ -106,4 +99,13 @@
 .acc_menu_apear > li {
     color:black;
     margin-bottom: 14px;
+}
+
+.header_login{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.header_login:hover{
+color: rgba(255, 255, 255);
 }
