--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -44,13 +44,21 @@
     color: #f7323f;
 }
 
+.scrolled_header_login{
+    text-decoration: none;
+    color: black;
+}
+
+.scrolled_header_login:hover{
+    color: rgba(0,0,0, 0.8);
+}
+
 .top_box > h1 {
     margin-left: calc((100vw - 1024px)/2);
 }
 
 .scrolled_top_box li {
     color: black;
-
 }
 
 .top_box > nav {
@@ -75,7 +83,7 @@
 }
 
 .nav_box > li:hover {
-    color: rgba(255,255,255);
+    color: rgba(0,0,0, 0.8);
 }
 
 .acc_menu_hidden {
